# k_means-interactive

./: Cargo.toml  build.rs
gui/: cfg.slint  export.slint  info.slint  logic.slint
gui/app/: window.slint
gui/base/: plane.slint
gui/io/: var_input.slint
gui/main/: plain.slint  plane.slint  toolbar.slint  window.slint
gui/point/: centroid.slint  point.slint  rand.slint
gui/rand/: point.slint
gui/sprite/: centroid.slint  groupable.slint  point.slint
gui/step/: step_input.slint
gui/step/subseq/: subseq_step.slint
src/: group.rs  lib.rs  main.rs  point_src.rs  state_serv.rs  util.rs
src/point_src/: err.rs  rand.rs
src/state_serv/: el_identity.rs  el_state.rs  simul_params.rs
src/state_serv/el_state/: centroids_in_simul.rs  points_in_simul.rs
